<resources>
    <string name="app_name">MyPokedex</string>
    <string name="number">Number:</string>
    <string name="name">Name:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="category">Category:</string>
    <string name="hp">HP:</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="spa">Special Attack:</string>
    <string name="spd">Special Defense:</string>
    <string name="speed">Speed:</string>
</resources>
